--- a/views/projects.html
+++ b/views/projects.html
@@ -93,7 +93,7 @@
  	  	<div id="head" class="text-center d-lg-block mt-5"> 
  	  		<a class="title" href="../index.html" style="color: steelblue;">PORTFOLIO</a>
  	  		<p>Personal portfolio site built using HTML, CSS and Bootstrap 4.<br><br><span class="text-muted"><i>Click on the title to view this project live | Click on the below icon for github repo</i></span></p></p>
- 	  		<li class="list-inline-item"><a href="#" style="font-size: 4em; color: steelblue;"><i class="fab fa-github"></i></a></li>
+ 	  		<li class="list-inline-item"><a href="https://github.com/ria1601/ria1601.github.io" style="font-size: 4em; color: steelblue;"><i class="fab fa-github"></i></a></li>
  	  	</div>
  	  </div>
 
