--- a/views/resume.html
+++ b/views/resume.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 
 	<title>Ria - Resume</title>
 
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="../public/style/resume.css">  
+	<link rel="stylesheet" type="text/css" href="../public/style/resume.css">
 
 	<link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
 
@@ -20,113 +22,152 @@
 
 <body>
 
-	<nav class="navbar navbar-light bg-light fixed-top" style="background-color: cadetblue !important; padding-block-end: 0.2em; padding-block-start: 0.2em;">
+	<nav class="navbar navbar-light bg-light fixed-top"
+		style="background-color: cadetblue !important; padding-block-end: 0.2em; padding-block-start: 0.2em;">
 
-    <span id="nav" class="navbar-brand mb-0 h1"><a href="../index.html" style="color: black;"> RIA </a></span>
+		<span id="nav" class="navbar-brand mb-0 h1"><a href="../index.html" style="color: black;"> RIA </a></span>
 
-     <ul class="nav justify-content-end">
+		<ul class="nav justify-content-end">
 
-       <li class="nav-item">
+			<li class="nav-item">
 
-       <a class="nav-link active" href="resume.html" style="color: black;"><em><strong>Resume</strong></em></a>
-       </li>
+				<a class="nav-link active" href="resume.html" style="color: black;"><em><strong>Resume</strong></em></a>
+			</li>
 
-       <li class="nav-item">
+			<li class="nav-item">
 
-       <a class="nav-link active" href="projects.html" style="color: black;"><em><strong>Projects</strong></em></a>
-       </li>
+				<a class="nav-link active" href="projects.html"
+					style="color: black;"><em><strong>Projects</strong></em></a>
+			</li>
 
-     </ul>
+		</ul>
 
- </nav> 
+	</nav>
 
-<div id="content" class="text-center mt-3" style="margin-bottom: 1em;">
-<!-- skill block -->
-		<div class="container text-center" style="background-color: black;width:100%;margin:auto;">
-		 	<div class="col-12 col-md-8 order-2 order-md-1 text-center" id="content_parent" style="margin: auto;">
-				<div class="jumbotron my-0 text-center" style="border-radius:0; padding-bottom: 2em;" id="content_box">
+	<div id="content" class="mt-3" style="margin-bottom: 1em;">
+		<!-- Intro -->
+		<div class="container" style="background-color: black;width:100%;margin:auto;  padding-top:3em;">
+			<div class="col-12 col-md-8 order-2 order-md-1" id="content_parent" style="margin: auto;">
+				<div class="jumbotron my-0" style="border-radius:0; padding-bottom: 2em; padding-top: 1em;" id="content_box">
+					<div style="padding:auto;">
+						<h1 style="text-align: center; background-color: cadetblue;">About</h1>
+						<hr>
+						<p><strong>I am pursuing BTech in <em>Computer Science and Communication engineering</em> from <a href="https://www.kiit.ac.in" style="color: cadetblue; text-decoration: none;">KIIT University</a>.</strong></p>
+						<p>I have relevant skills in the field of <em>Web Development</em> and I am looking for oppurtunities to enhance my skillset
+							and grow as a professional in the industry along with lots of learning.</p>
+						<p>I have keen interest in learning new things and some of my hobbies include singing, painting, watching movies and listening music.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	
+		<!-- skill block -->
+		<div class="container text-center" style="background-color: black;padding-top: 1em; width:100%;margin:auto;">
+			<div class="col-12 col-md-8 order-2 order-md-1 text-center" id="content_parent" style="margin: auto;">
+				<div class="jumbotron my-0 text-center" style="border-radius:0; padding-top: 1em; padding-bottom: 2em;" id="content_box">
 					<div style="text-align: center; padding:auto;">
-		 				<h1 style="text-align: center; background-color: cadetblue;">Skills</h1>
-		 				<hr>
+						<h1 style="text-align: center; background-color: cadetblue;">Skills</h1>
+						<hr>
 						<ul>
-							<li><em><strong>Programming : </strong></em><em>C++ , JavaScript </em></li>
-							<li><em><strong>Web Development : </strong></em><em> Node.JS, REST-API, HTML 5, CSS 3</em></li>
-							<li><em><strong>Cyber Security : </strong></em><em> Penetration testing, System/Network security</em></li>
-							<li><em><strong>Frameworks : </strong></em><em>NPM, Express, Mongoose, Bootstrap 3/4, jQuery</em></li>
+							<li><em><strong>Programming : </strong></em><em>C, C++ and basic Python</em></li>
+							<li><em><strong>Web Development : </strong></em><em> Node.JS, REST-API, HTML 5, CSS 3</em>
+							</li>
+							<li><em><strong>Cyber Security : </strong></em><em> Penetration testing, System/Network
+									security</em></li>
+							<li><em><strong>Frameworks : </strong></em><em>NPM, Express, Mongoose, Bootstrap 3/4,
+									jQuery</em></li>
 							<li><em><strong>DBMS : </strong></em><em>SQL, MongoDB</em></li>
-							<li><em><strong>Tools : </strong></em><em>Git, Kali Linux, Chrome DevTools</em></li>
-		 				</ul>
-		 			</div>
-		 		</div>
-		 	</div>
+							<li><em><strong>Tools : </strong></em><em>Git, Kali Linux, Chrome DevTools, Sublime text, Heroku, VScode, MS office</em></li>
+						</ul>
+					</div>
+				</div>
+			</div>
 		</div>
 
-<!-- training/cert block -->
+		<!-- training/cert block -->
 		<div class="container text-center" style="background-color: black; padding-top: 1em; margin: auto;">
-		 	<div class="col-12 col-md-8 order-2 order-md-1" style="margin: auto;" id="2nd">
-				<div class="jumbotron my-0" style="border-radius:0; padding-top: 1em; padding-bottom: 2em;" id="content_box1">
+			<div class="col-12 col-md-8 order-2 order-md-1" style="margin: auto;" id="2nd">
+				<div class="jumbotron my-0" style="border-radius:0; padding-top: 1em; padding-bottom: 2em;"
+					id="content_box1">
 					<div style="text-align: center;padding: auto; padding-block-end:0;">
-		 				<h1 style="text-align: center; background-color: cadetblue;" >Trainings / Certifications</h1>
-		 				<hr>
+						<h1 style="text-align: center; background-color: cadetblue;">Trainings / Certifications</h1>
+						<hr>
 						<ul>
 							<li><em><strong>Cyber Security Summer Training Program </strong></em></li>
-							<li style="padding-bottom: 6em;"><a href="https://rcplindia.in" style="color: steelblue;">RCPL</a><em> - August 2019 </em>
-							<p><a href="https://rcplindia.in/student-dashboard/certificates/verify.php?cert=B11AE2A980" class="btn btn-outline-info btn-sm">Credential</a></p></li>
+							<li style="padding-bottom: 6em;"><a href="https://rcplindia.in"
+									style="color: steelblue;">RCPL</a><em> - August 2019 </em>
+								<p><a href="https://rcplindia.in/student-dashboard/certificates/verify.php?cert=B11AE2A980"
+										class="btn btn-outline-info btn-sm">Credential</a></p>
+							</li>
 						</ul>
 
 
 						<ul>
 							<li><em><strong> MTA : Security Fundamentals </strong></em></li>
-							<li style="padding-bottom: 6em;"><a href="https://www.microsoft.com/en-us/learning/mta-certification.aspx" style="color: steelblue;">Microsoft</a><em> - August 2019</em>
-							<p><a href="https://www.youracclaim.com/badges/af364c1b-22a3-4537-bbb6-0b198c6dd551/linked_in_profile" class="btn btn-outline-info btn-sm">Credential</a></p></li>
+							<li style="padding-bottom: 6em;"><a
+									href="https://www.microsoft.com/en-us/learning/mta-certification.aspx"
+									style="color: steelblue;">Microsoft</a><em> - August 2019</em>
+								<p><a href="https://www.youracclaim.com/badges/af364c1b-22a3-4537-bbb6-0b198c6dd551/linked_in_profile"
+										class="btn btn-outline-info btn-sm">Credential</a></p>
+							</li>
 						</ul>
 
 
 						<ul>
 							<li><em><strong>MTA : Networking Fundamentals </strong></em></li>
-							<li style="padding-bottom: 6em;"><a href="https://www.microsoft.com/en-us/learning/mta-certification.aspx" style="color: steelblue;">Microsoft</a><em> - July 2019</em>
-							<p><a href="https://www.youracclaim.com/badges/9dc214b9-6c42-4073-bc11-21ed1aff1bd6/linked_in_profile" class="btn btn-outline-info btn-sm">Credential</a></p></li>
+							<li style="padding-bottom: 6em;"><a
+									href="https://www.microsoft.com/en-us/learning/mta-certification.aspx"
+									style="color: steelblue;">Microsoft</a><em> - July 2019</em>
+								<p><a href="https://www.youracclaim.com/badges/9dc214b9-6c42-4073-bc11-21ed1aff1bd6/linked_in_profile"
+										class="btn btn-outline-info btn-sm">Credential</a></p>
+							</li>
 						</ul>
 
 
 						<ul>
 							<li><em><strong>The Web Developer Bootcamp </strong></em></li>
-							<li style="padding-bottom: 6em;"><a href="https://www.udemy.com" style="color: steelblue;">Udemy</a><em> - October 2019</em>
-							<p><a href="https://www.udemy.com/certificate/UC-9DFZF8WG/" class="btn btn-outline-info btn-sm">Credential</a></p></li>
-		 				</ul>
-				
-			        </div>
+							<li style="padding-bottom: 6em;"><a href="https://www.udemy.com"
+									style="color: steelblue;">Udemy</a><em> - October 2019</em>
+								<p><a href="https://www.udemy.com/certificate/UC-9DFZF8WG/"
+										class="btn btn-outline-info btn-sm">Credential</a></p>
+							</li>
+						</ul>
+
+					</div>
 				</div>
 			</div>
 		</div>
 
-<!-- education block -->
+		<!-- education block -->
 		<div class="container text-center" style="background-color: black; padding-top: 1em; margin: auto;">
-	 	<div class="col-12 col-md-8 order-2 order-md-1" style="margin: auto;" id="3rd">
-				<div class="jumbotron my-0" style="border-radius:0; padding-top: 1em; padding-bottom: 2em;" id="content_box1">
+			<div class="col-12 col-md-8 order-2 order-md-1" style="margin: auto;" id="3rd">
+				<div class="jumbotron my-0" style="border-radius:0; padding-top: 1em; padding-bottom: 2em;"
+					id="content_box1">
 					<div style="text-align: center;padding: auto; padding-block-end:0;">
-		 				<h1 style="text-align: center; background-color: cadetblue;">Education</h1>
-			 				<!-- education 1 -->
-			 				<hr>
-			 				<p><strong>B.Tech in Computer Science and Communication Engineering</strong></p>
+						<h1 style="text-align: center; background-color: cadetblue;">Education</h1>
+						<!-- education 1 -->
+						<hr>
+						<p><strong>B.Tech in Computer Science and Communication Engineering</strong></p>
 
-			                <p>School Of Computer Engineering, <a href="https://kiit.ac.in" style="color: steelblue;">KIIT University </a>(2017-2021)</p>
+						<p>School Of Computer Engineering, <a href="https://kiit.ac.in" style="color: steelblue;">KIIT
+								University </a>(2017-2021)</p>
 
-							<p style="margin-bottom: 0;">CGPA : <strong><em>8.28</em></strong> / 10 </p>
+						<p style="margin-bottom: 0;">CGPA : <strong><em>8.13</em></strong> / 10 </p>
 
 					</div>
 				</div>
+			</div>
 		</div>
-		</div>
-</div>	
-			
+	</div>
 
 
 
 
 
-<!-- <script type="text/javascript" src="Portfolio/resume.js"></script> -->
 
-					
+	<!-- <script type="text/javascript" src="Portfolio/resume.js"></script> -->
+
+
 </body>
+
 </html>
